--- a/GoalsTracker/package.json
+++ b/GoalsTracker/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/app",
-    "server": "nodemon backend/app"
+    "server": "nodemon backend/app",
+    "client": "npm start --prefix frontend"
   },
   "author": "Abhishek Bharadwaz Mar 2022",
   "license": "MIT",
